# NYC-taxi

./: .gitignore  README.md  pyproject.toml  test.txt  test_spark.py
config/: config.yaml  databricks.yaml
dashboard/: app.py  requirements.txt
dashboard/components/: chart_card.py  header.py  kpi_cards.py  location_section.py  payment_section.py  plotly_theme.py  revenue_section.py  sidebar.py
dashboard/config/: styles.py  theme.py
dashboard/utils/: connection.py  dashboard_data.py  formatter.py  helper.py  queries.py
databricks/: bronze_to_silver.py  silver_to_gold.py
databricks/common/: cleaning.py  config.py  enrichment.py  spark_utils.py  validation.py
ingestion/: downloader.py  main.py  run_ingestion.py  s3_upload.py
ingestion/src/: s3_upload.py  validator.py
snowflake/: create_file_format.sql  create_tables.sql  snowflake_setup.sql
transformation/: analyze_silver.py  bronze_to_silver.py  gold_analyze.py  silver_EDA.ipynb  silver_to_gold.py
transformation/common/: cleaning.py  config.py  enrichment.py  gold.py  io_utils.py  validation.py
utils/: config.py  constants.py  logger.py
