[project]
name = "nyc-taxi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "pyspark==3.5.1",
    "boto3>=1.43.30",
]
